# tenderpost-api

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER-DEBUG-GUIDE.md  DOCKER-OPTIMIZATION.md  DOCKER-VERIFY.sh  Dockerfile  INTEGRATION-SUMMARY.md  OPTIMIZATION-SUMMARY.md  QUICK-REFERENCE.md  QUICK-START.md  README.md  SUPABASE-SETUP.md  cloudflare_crawl.py  docker-compose.dev.yml  docker-compose.yml  embeddings.py  main.py  package-lock.json  pyproject.toml  requirements.txt  run-debug.sh  run_cron.py  scraper.py  start.sh  status.md  supabase_client.py  test-api.sh
captcha/: __init__.py  screenshot.py  solver.py
scripts/: backfill_tenders.py
